<resources>
    <string name="app_name">FoodTurtle</string>
    <string name="aoo" translatable="false">西屯路右轉300公尺</string>
    <string name="km" translatable="false">今日跑單距離 30km</string>
    <string name="ntdollar" translatable="false">NT600</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="or" translatable="false">TODO</string>
    <string name="road" translatable="false">x導航</string>
    <string name="boo" translatable="false">插入新訂單</string>
    <string name="todowhere" translatable="false">TODO</string>
    <string name="contiinue" translatable="false">...</string>
    <string name="order" translatable="false">訂單#00</string>
    <string name="shop" translatable="false">永和豆漿(逢甲店)</string>
    <string name="todoor" translatable="false">TODO</string>
    <string name="button1" translatable="false">Button</string>
    <string name="button2" translatable="false">Button</string>
    <string name="image1">TODO</string>
    <string name="background">TODO</string>
    <string name="who">TODO</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_shopping_cart">Shopping Cart</string>
    <string name="menu_history_orders">History Orders</string>
    <string name="menu_coupon">Coupon</string>
</resources>