<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fcu.app.foodturtle.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shopping_cart"
        android:name="fcu.app.foodturtle.ui.gallery.GalleryFragment"
        android:label="@string/menu_shopping_cart"
        tools:layout="@layout/fragment_shopping_cart" />

    <fragment
        android:id="@+id/nav_history_orders"
        android:name="fcu.app.foodturtle.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_history_orders"
        tools:layout="@layout/fragment_history_orders" />
</navigation>